[package]
name = "c509"
version = "0.3.0"
authors = ["John Preuß Mattsson <john.mattsson@ericsson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3"
chrono = "0.4"
colored = "2"
hex = "0.4"
oid = "0.2"
regex = "1"
rustls = "0.19"
webpki = "0.21"
webpki-roots = "0.21"
bit_reverse = "0.1.8"
#env_logger = "0.11"
